修复插件下载失败依旧修改插件状态的问题